# libCiva

./: .gitignore  CMakeCache.txt  CMakeLists-boilerplate.txt  CMakeLists.txt  GeographicLib.h  Makefile  Readme.md  cmake_install.cmake  compile_commands.json  datarefs.cpp  datarefs.h  dme_functions.cpp  dme_functions.h  ecef_functions.cpp  ecef_functions.h  functions.cpp  functions.h  navsystem.cpp  navsystem.h  plugin.cpp  pos_functions.cpp  pos_functions.h  sources.h  structs.cpp  structs.h  variables.h  window_function.cpp  window_function.h
.clangd/index/: GeographicLib.h.E45CA30801B4A89B.idx  XPLMDataAccess.h.A87AD54477CE011C.idx  XPLMDefs.h.10363215D2D90338.idx  XPLMDefs.h.7A162B1113DA72B8.idx  XPLMDisplay.h.357A92FAC96C6E92.idx  XPLMDisplay.h.B217FF5A2395FD52.idx  XPLMGraphics.h.5676B2DF5146D89D.idx  XPLMGraphics.h.F36764D6DA48B2F8.idx  XPLMProcessing.h.F6ABF78E43BFC5FB.idx  XPLMUtilities.h.B8D7335035C8CC97.idx  assert.h.6E03DBE025746726.idx  cmd.h.9AA1561A14002E67.idx  core.h.C546B1C870745E08.idx  datarefs.cpp.AF103536AC663039.idx  datarefs.h.0A7368D01B71DF0A.idx  dme_functions.cpp.023612B0329AAB30.idx  dme_functions.h.E32A3CC6028BB117.idx  dr.h.6DEFB093BFAD4365.idx  dr_cmd_reg.h.ADFA0FA54555B56A.idx  ecef_functions.cpp.A75F7E6617486890.idx  ecef_functions.h.89309CA6C109B71A.idx  functions.cpp.1FB158B1E2628215.idx  functions.h.FE7AE9C04B447966.idx  geom.h.D4914E0A618B19F6.idx  helpers.h.732B5BEA7DFB2AB4.idx  lacf_getline_impl.h.5811A89307F35881.idx  libconfig.h.3886D1360652795C.idx  log.h.C76578D4EFA3D00C.idx  math.h.CD2D6DC71FAACBFF.idx  math_core.h.046669F316F6296B.idx  navsystem.cpp.A657E89882DA82AC.idx  navsystem.h.B8BB1A400D2709CE.idx  parser_funcs.h.F25E845691F30240.idx  perf.h.A71D9C5488B9A12B.idx  plugin.cpp.0E13DFF15EFF4820.idx  plugin.cpp.BD8B8893D16A763D.idx  pos_functions.cpp.4B64D31702FBFA74.idx  pos_functions.h.82851ECFAD930345.idx  safe_alloc.h.9000CCA23855456E.idx  sources.h.519A8F49752826F3.idx  (+5 more)
CMakeFiles (copy)/: Makefile.cmake  Makefile2  TargetDirectories.txt
CMakeFiles (copy)/CIVA_IRU.dir/: CXX.includecache  cmake_clean.cmake  link.txt
build (copy)/: compile_commands.json
build (copy)/.cmake/api/v1/reply/: target-CIVA_IRU-Debug-0182c4a5988124160338.json
libacfutils/mac64/include/: cairo-features.h
output/CIVA_IRU/lin_x64/: CIVA_IRU.xpl
